--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 3.10)
 
 project(DabEngine)
 
+set(CMAKE_CXX_FLAGS "-g")
+
 option(BUILD_EXE "Build the Test exe" OFF)
 
 include_directories("${CMAKE_SOURCE_DIR}/../includes")
@@ -17,6 +19,8 @@ target_link_libraries(DabEngine opengl32)
 
 if(BUILD_EXE)
 	# make exe
+	set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin )
+
 	add_executable(EXE Main.cpp)
 
 	target_link_libraries(EXE DabEngine)
